testsuite/tests/rename/should_fail/rnfail046.hs
-- Qualified name in binding position
module ShouldFail where

data Test = Map.Map Int Int
